--- a/internetshop/shop/templates/index.html
+++ b/internetshop/shop/templates/index.html
@@ -1,9 +1,13 @@
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Great+Vibes&family=Marck+Script&display=swap');
+
         * {
-            font-family Arial;
+            font-family: "Marck Script";
         }
         h1 {
         font-size: 77px;
+    color: #14dadd;
+    font-style: italic;
     }
         img {
         width: 170px;
@@ -14,11 +18,15 @@
         .product {
         border: 3px black solid;
         display: flex;
+        margin-top: 37px;
+        background-color: #d4d9d8;
+        border-radius: 7px;
+        padding: 10px;
         }
 
         h2 {
         width: 300px;
-        }
+               }
 
         button {
         margin-left: auto;
@@ -26,7 +34,7 @@
     </style>
 
 
-<h1>ЧудоМагазин</h1>
+<h1><span style="color: #14de95">Чудо</span>Магазин</h1>
 
     <a href="/">Главная</a>
     <a href="/products">Товары</a>
